Fix firefox icons not showing

--- a/client/src/app/toolbar/toolbar-option.scss
+++ b/client/src/app/toolbar/toolbar-option.scss
@@ -27,23 +27,27 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 15px;
 }
 
 .button {
+  margin: 10px 10px 0 10px;
+  border-radius: 50%;
+
   width: 50px;
   height: 50px;
-  margin: 10px;
-  padding: 30px;
-  border-radius: 50%;
-  display: flex;
+
   justify-content: center;
   align-items: center;
+  display: flex;
+  
+  transition: 0.3s;
 }
 
 .tool-icon {
-  height: 28px;
-  width: 28px;
+    --length: 23px;
+    display: block;
+    height: var(--length);
+    width: var(--length);
 }
 
 .selected-tool {
